<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyName"
            android:gravity="start"
            android:textSize="@dimen/header_text_size"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvRealTimePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/header_text_size"
            android:layout_weight="1" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/headerContainer"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/trendContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lineChart"
        android:visibility="invisible"
        android:layout_margin="@dimen/size5"
        >
        <TextView
            android:id="@+id/tvDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvQuarterly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarterly"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvYTD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearToDate"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvYearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_weight="1"
            android:layout_margin="@dimen/size3"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/trendContainer"
        android:visibility="invisible"
        android:layout_margin="@dimen/size5">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dayHigh"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvDayHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dayLow"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvDayLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvAvgVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/separatorColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv52WkHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size7"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:gravity="start"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv52WkLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/data_text_size"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/size5"
        >
        <TextView
            android:id="@+id/tvSell"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size35"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/size5"
            android:background="@color/colorPrimary"
            android:text="@string/sell"/>
        <TextView
            android:id="@+id/tvBuy"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size35"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/size5"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:text="@string/buy"/>
    </LinearLayout>

</RelativeLayout>